+ top 10 chars and some css minor changes to index file

--- a/AnimeTop10/index.html
+++ b/AnimeTop10/index.html
@@ -25,8 +25,9 @@
     <section class="landing-section">
         <div class="wrapper">
             <div class="content-landing-section text-center">
-                <h1>Top 10 Anime of All Time</h1>
-                <p>Check out my personal top 10!</p>
+                <h1 data-aos="fade-down">Top 10 Anime of All Time</h1>
+                <p style="margin-bottom: 40px;" data-aos="fade-down">Check out my personal top 10!</p>
+                <a href="../pages/characters.html" class="cta-landing" data-aos="fade-right">Top 10 characters</a>
             </div>
             <div class="chevron-scroll-down">
                 <a href="#number-10" class="fas fa-chevron-down"></a>
